--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,27 @@
+body {
+    margin: 0; 
+}
+header#header {
+    background-color: lightgray;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: unset;
+}
+
+img#logo {
+    width: 8rem;
+    padding: 0.5rem;
+}
+
+a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    color: black;
+    font-weight: 500;
+}
 main{
     background-color: orange;
     color: white;
