--- a/CSS/main.css
+++ b/CSS/main.css
@@ -15,6 +15,13 @@ img#logo {
     padding: 0.5rem;
 }
 
+.menu-principal {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 a {
     text-decoration: none;
     font-size: 1.2rem;
@@ -23,6 +30,7 @@ a {
     color: black;
     font-weight: 500;
 }
+
 
 .main {
     background-color: #b4c2dd;
@@ -47,8 +55,35 @@ a {
     text-transform: uppercase;
     font-size: 2.5rem;
     width: 23%;
+    margin: 2rem;
+    
+}
+.sections {
+    display: flex;
+    padding: 0;
+    margin: 1.5rem 0rem;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+}
+.section-item {
+    width: 5rem;
+    height: 5rem;
+    background: orange;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+.text-anchor {
+    font-size: 0.5rem;
+    padding: 1.5rem 0.8rem;
+    margin: 0;
+    text-transform: uppercase;
 }
 footer {
     background-color: pink;
 }
+
 
