--- a/CSS/main.css
+++ b/CSS/main.css
@@ -31,42 +31,40 @@ a {
     font-weight: 500;
 }
 
-
 .main {
     background-color: #b4c2dd;
     color: white;
 }
 
 .banner {
-    background-image: url("../images/banner.jpg");
+    background-image: url( '../images/banner.jpg' );
     background-repeat: no-repeat;
     background-size: cover;
     height: 29vw;
-    width: 100% ;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    
 }
 
-.banner-tittle{
+.banner-title {
+    font-size: 2.6rem;
     margin: 0;
     text-align: right;
     text-transform: uppercase;
-    font-size: 2.5rem;
-    width: 23%;
-    margin: 2rem;
-    
+    width: 25%;
 }
+
 .sections {
-    display: flex;
-    padding: 0;
-    margin: 1.5rem 0rem;
     list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
     justify-content: center;
     align-items: center;
     gap: 4rem;
 }
+
 .section-item {
     width: 5rem;
     height: 5rem;
@@ -76,14 +74,58 @@ a {
     justify-content: center;
     align-items: flex-start;
 }
+
+.obras {
+    padding: 2.2rem 0;
+}
+
 .text-anchor {
-    font-size: 0.5rem;
-    padding: 1.5rem 0.8rem;
+    font-size: .55rem;
+    padding: 1.2rem 0.8rem;
     margin: 0;
     text-transform: uppercase;
 }
+
+.premios {
+    color: black;
+}
+
+table {
+    width: 50%;
+    margin: 0 auto;
+    padding: 0 0 2rem 0;
+}
+
+.premios-title {
+    text-align: center;
+    margin: 2rem 0 3rem 0;
+}
+
+.date {
+    border: 2px solid blue;
+    background: orange;
+    padding: 0.7rem 1rem;
+    font-weight: bold;
+}
+
+td {
+    padding-left: 2rem;
+    font-size: .9rem;
+
+}
+
+.primer-premio {
+    height: 6rem;
+}
+
+
 footer {
     background-color: pink;
 }
 
+.copyright {
+    margin: 0;
+    padding: 1rem;
+    text-align: center;
+}
 
